--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - mongodb
     environment:
-      MONGO_URL: 'mongodb://mongodb:27017/hyperativa'
+      MONGOCLIENT_DEFAULT_CONNECTION_URL: 'mongodb://root:39411434@mongodb:27017/hyperativa?authSource=admin'
     volumes:
       - nosqlclient-volume:/data/db
     ports:
@@ -40,11 +40,16 @@ services:
     volumes:
       - .:/desafio_hyperativa
     ports:
-      - '8080:80'
+      - '8888:8888'
     environment:
-      DBAAS_MONGODB_ENDPOINT: 'mongodb://mongodb:27017/hyperativa'
-      DATABASE_NAME: 'credit_card'
-    command: python
+      SECRET: 'desafio'
+      MONGODB_HOST: 'localhost'
+      MONGODB_USER: 'root'
+      MONGODB_PASSWORD: '39411434'
+      MONGODB_DATABASE: 'hyperativa'
+      DBAAS_MONGODB_ENDPOINT: mongodb://root:39411434@mongodb:27017/hyperativa?authSource=admin
+      PORT: 8888
+      command: python app.py
 
 volumes:
   mongodb-volume:
