--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ MONGODB_USER=root
 MONGODB_PASSWORD=39411434
 MONGODB_DATABASE=hyperativa
 DBAAS_MONGODB_ENDPOINT=mongodb://root:39411434@localhost:27017/hyperativa?authSource=admin
+MINUTES=200
 #.format(MONGODB_USER, MONGODB_PASSWORD, MONGODB_HOST)"
