--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ MONGODB_PASSWORD=39411434
 MONGODB_DATABASE=hyperativa
 DBAAS_MONGODB_ENDPOINT=mongodb://root:39411434@localhost:27017/hyperativa?authSource=admin
 MINUTES=200
+DIGITS=13
 #.format(MONGODB_USER, MONGODB_PASSWORD, MONGODB_HOST)"
