--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==1.1.1
 pycparser==2.20
 PyJWT==2.1.0
 pymongo==3.11.4
+pytz==2021.1
 PyYAML==5.4.1
 requests==2.25.1
 simplejson==3.17.2
